--- a/AlchenomyFrontend/package.json
+++ b/AlchenomyFrontend/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.3",
     "@tailwindcss/vite": "^4.0.1",
+    "@tanstack/react-query": "^5.66.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4",
-    "tailwindcss": "^4.0.1"
+    "tailwindcss": "^4.0.1",
+    "viem": "^2.23.2",
+    "wagmi": "^2.14.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
