--- a/AlchenomyFrontend/package.json
+++ b/AlchenomyFrontend/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.1",
     "viem": "^2.23.2",
     "wagmi": "^2.14.11"
